@@ -22,6 +22,9 @@
 # special tag to specify the current version
 [V]  TomeNET 4.0.0 aka "The Gathering"
 
+25/11/2002
+[I]- No more color information in the message dump in character dumps
+
 20/11/2002
 [I]- Unkown skills(no mod, no value) arent displayed in the list
 [I]- Removed a *LOT* of AI_ANNOY
